<resources>
    <string name="app_name">麻雀記録表！</string>
    <string name="solo_result">個人成績検索</string>
    <string name="all_result">対戦検索</string>
    <string name="jump_web">Webサイトへ</string>
    <string name="privacy_policy">プライバシーポリシー</string>
    <string name="review_string">レビュー</string>
    <string name="rank_1">1位</string>
    <string name="rank_2">2位</string>
    <string name="rank_3">3位</string>
    <string name="rank_4">4位</string>
    <string name="zero_zero">00点</string>
    <string name="min_score">最小点数</string>
    <string name="ave_score">平均点数</string>
    <string name="sum_score">累計点数</string>
    <string name="max_score">最大点数</string>
    <string name="player_select">プレイヤー選択</string>
    <string name="point">点数</string>
    <string name="result">集計</string>
    <string name="data_list_easy">簡易表</string>
    <string name="summary">データまとめ</string>
    <string name="hp_home">幻想乃桜工房のHP</string>
    <string name="drawer_open">開く</string>
    <string name="drawer_close">閉じる</string>

    <string name="privacy_url">https://www.gensounosakura.work/posts/6348381</string>
    <string name="home_url">https://www.gensounosakura.work</string>
    <string name="review_url">https://play.google.com/store/apps/details?id=momonyan.mahjongrecorder</string>
    <string name="other_app_url">https://play.google.com/store/apps/developer?id=幻想乃桜工房</string>
    <string name="other_app_page_url">https://play.google.com/store/apps/details?id=%s</string>
    <string name="back_string">戻る</string>
    <string name="other_app">他アプリ</string>
    <string name="other_app_name1">楽々麻雀ツール！</string>
    <string name="other_app_name2">麻雀点数やりとりメモ！</string>

    <string name="version_names">Version:%s</string>
    <string name="liquidation">10-30集計</string>

    <string name="share_format_string_data">%d位 %s:%s00点\n</string>
</resources>
