<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                    android:layout_height="wrap_content"

                                    app:cardUseCompatPadding="true">
    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="wrap_content">


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nameCardListTextView" tools:text="名前" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" android:textSize="18sp"/>
        <TextView
                android:text="@string/rank_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rankCardListTextView" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/nameCardListTextView"/>
        <TextView
                android:text="@string/rank_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rankCardListTextView2" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/rankCardListTextView" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"/>
        <TextView
                android:text="@string/rank_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rankCardListTextView3" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/rankCardListTextView2" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"/>
        <TextView
                android:text="@string/rank_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rankCardListTextView4" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/rankCardListTextView3" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/matchCardListTextView" tools:text="対戦回数" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:text="@string/point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pointCardListTextView"
                app:layout_constraintStart_toEndOf="@+id/space2" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/nameCardListTextView" android:layout_marginStart="8dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/resultCardListTextView" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/pointCardListTextView"
                android:layout_marginStart="8dp" android:text="@string/result"
                app:layout_constraintStart_toEndOf="@+id/space2"/>
        <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/space2"/>
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>