<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true">
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/rank_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/rankTextView1"
                    android:layout_weight="1"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/nameTextView1" tools:text="名前"
                    android:layout_weight="4" android:textStyle="bold"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/pointTextView1"
                    android:layout_weight="3" tools:text="点数の表示場所" android:gravity="right"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/resultPointTextView1"
                    android:layout_weight="3" tools:text="結果プラマイ" android:gravity="right"/>
        </TableRow>

        <Space
                android:layout_width="wrap_content"
                android:layout_height="5dp" android:background="@color/colorPrimary"/>

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/rank_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/rankTextView2"
                    android:layout_weight="1"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/nameTextView2" tools:text="名前"
                    android:layout_weight="4" android:textStyle="bold"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/pointTextView2"
                    android:layout_weight="3" tools:text="点数の表示場所" android:gravity="right"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/resultPointTextView2"
                    android:layout_weight="3" tools:text="結果プラマイ" android:gravity="right"/>
        </TableRow>

        <Space
                android:layout_width="wrap_content"
                android:layout_height="5dp" android:background="@color/colorPrimary"/>

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/rank_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/rankTextView3"
                    android:layout_weight="1"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/nameTextView3" tools:text="名前"
                    android:layout_weight="4" android:textStyle="bold"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/pointTextView3"
                    android:layout_weight="3" tools:text="点数の表示場所" android:gravity="right"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/resultPointTextView3"
                    android:layout_weight="3" tools:text="結果プラマイ" android:gravity="right"/>
        </TableRow>

        <Space
                android:layout_width="wrap_content"
                android:layout_height="5dp" android:background="@color/colorPrimary"/>

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/rank_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/rankTextView4"
                    android:layout_weight="1"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/nameTextView4" tools:text="名前"
                    android:layout_weight="4" android:textStyle="bold"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/pointTextView4"
                    android:layout_weight="3" tools:text="点数の表示場所" android:gravity="right"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/resultPointTextView4"
                    android:layout_weight="3" tools:text="結果プラマイ" android:gravity="right"/>
        </TableRow>
    </TableLayout>
</android.support.v7.widget.CardView>
