<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            app:layout_constraintTop_toTopOf="@+id/playerTitleTextView"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toEndOf="@+id/playerTitleTextView" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/playerTitleTextView"/>
    <TextView
            android:text="Player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerTitleTextView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:textSize="18sp"/>

    <com.github.mikephil.charting.charts.PieChart
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout2"/>
    <TableLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:id="@+id/tableLayout"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/space">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
        >
            <TextView
                    android:text="@string/rank_1"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content" android:id="@+id/rank1TextView" android:layout_weight="1"
                    android:textSize="18sp"/>
            <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content" android:id="@+id/rank1CountTextView" tools:text="-- 回/ -- 回"
                    android:layout_weight="3" android:gravity="end" android:textSize="18sp"/>
            <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content" android:id="@+id/rank1PercentTextView" tools:text="--%"
                    android:layout_weight="3" android:gravity="end" android:textSize="18sp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/rank_2"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content" android:id="@+id/rank2TextView" android:layout_weight="1"
                    android:textSize="18sp"/>
            <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content" android:id="@+id/rank2CountTextView" tools:text="-- 回/ -- 回"
                    android:layout_weight="3" android:gravity="end" android:textSize="18sp"/>
            <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content" android:id="@+id/rank2PercentTextView" tools:text="--%"
                    android:layout_weight="3" android:gravity="end" android:textSize="18sp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/rank_3"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content" android:id="@+id/rank3TextView" android:layout_weight="1"
                    android:textSize="18sp"/>
            <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content" android:id="@+id/rank3CountTextView" tools:text="-- 回/ -- 回"
                    android:layout_weight="3" android:gravity="end" android:textSize="18sp"/>
            <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content" android:id="@+id/rank3PercentTextView" tools:text="--%"
                    android:layout_weight="3" android:gravity="end" android:textSize="18sp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/rank_4"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content" android:id="@+id/rank4TextView" android:layout_weight="1"
                    android:textSize="18sp"/>
            <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content" android:id="@+id/rank4CountTextView" tools:text="-- 回/ -- 回"
                    android:layout_weight="3" android:gravity="end" android:textSize="18sp"/>
            <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content" android:id="@+id/rank4PercentTextView" tools:text="--%"
                    android:layout_weight="3" android:gravity="end" android:textSize="18sp"/>
        </TableRow>
    </TableLayout>
    <TableLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout" android:id="@+id/tableLayout2">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="累計点数"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content" android:id="@+id/pointSumTitleText" android:layout_weight="1"/>
            <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content" android:id="@+id/pointSumTextView" android:layout_weight="3"
                    tools:text="-----点"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="平均点数"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content" android:id="@+id/pointAveTitleText3"
                    android:layout_weight="1"/>
            <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content" android:id="@+id/pointAveTextView" android:layout_weight="3"
                    tools:text="-----点"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
        >
            <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content" android:id="@+id/pointMaxTitleText" android:text="最大点数"
                    android:layout_weight="1"/>
            <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content" android:id="@+id/pointMaxTextView" android:layout_weight="3"
                    tools:text="-----点"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="最小点数"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content" android:id="@+id/pointMinTitleText" android:layout_weight="1"/>
            <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content" android:id="@+id/pointTextView" android:layout_weight="3"
                    tools:text="-----点"/>
        </TableRow>
    </TableLayout>
    <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/space" android:id="@+id/recyclerView"/>
    <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/space"
            app:layout_constraintVertical_bias="0.375"/>
</android.support.constraint.ConstraintLayout>